readied app for deployment

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,7 +9,7 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <p>Some text here.</p>
+      <p>Enter a location into the box below to get the current weather.</p>
       <form class="search-form" action="index.html" method="post">
         <input type="text" name="search" value="" placeholder="Enter a location">
         <button type="submit" name="submit-btn">Search</button>
