--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
     <div class="main-content">
       {{>header}}
+      <p id="about">This site was created by <a href="https://github.com/pulamusic" target="_blank">Jim Carroll</a> for a Udemy tutorial titled <a href="https://www.udemy.com/the-complete-nodejs-developer-course-2/" target="_blank">The Complete Node.js Developer Course</a>. The site makes use of the <a href="https://www.mapbox.com/" target="_blank">MapBox.com</a> and <a href="https://darksky.net/forecast/40.7127,-74.0059/us12/en" target="_blank">DarkSky.net</a> APIs.</p>
       <img src="/images/JimHeadshot.JPG" alt="Jim Carroll" class="portrait">
     </div>
 
